--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,23 @@
 body{
     background-color: darkseagreen;
 }
+
+button{
+    height: 100px;
+    width: 100px;
+}
+
+#grid{
+    display: flex;
+    margin: 0 auto;
+    background-color: aqua;
+    width: 80vw;
+    height: 80vw;
+    max-height: 90vh;
+    max-width: 90vh;
+    flex-wrap: wrap;
+}
+
+.players{
+    display: flex;
+}
