--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body{
 }
 
 button{
-    height: 100px;
+    height: 50px;
     width: 100px;
 }
 
@@ -11,13 +11,21 @@ button{
     display: flex;
     margin: 0 auto;
     background-color: aqua;
-    width: 80vw;
-    height: 80vw;
-    max-height: 90vh;
-    max-width: 90vh;
+    width: 70vw;
+    height: 70vw;
+    max-height: 70vh;
+    max-width: 70vh;
     flex-wrap: wrap;
 }
 
 .players{
     display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.button-container{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
 }
